# E-commerce

./: README.md  pyproject.toml
src/: cat_and_prod_check.py  category.py  lawngrass.py  main.py  print_mixin.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_lawngrass.py  test_print_mixin.py  test_product.py  test_smartphone.py
